--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Maintenance - Moota.co</title>
+	<title>Riad Ghoneim</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
 	<style type="text/css">
 		body {
@@ -41,7 +41,7 @@
 </head>
 <body>
 	<div id="shim">shim for font face</div>
-	<h1>Maintenance</h1>
+	<h1>Riad Ghoneim</h1>
 	<p style="text-align:center;">Sedang migrasi server dan upgrade engine 23:00 s/d 05:00. Mohon doanya :)</p>
 	<div id="pacman"></div>
 
