--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 	<div id="shim">shim for font face</div>
 	<h1>Riad Ghoneim</h1>
-	<p style="text-align:center;"> https://www.linkedin.com/in/riad-ghoneim/ </p>
+	<p href="https://www.linkedin.com/in/riad-ghoneim/ ">LinkedIn</p>
 	<div id="pacman"></div>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
