--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 	<div id="shim">shim for font face</div>
 	<h1>Riad Ghoneim</h1>
-	<a href="https://www.linkedin.com/in/riad-ghoneim/">Linkedin</a>
+	<a style="text-align:center;" href="https://www.linkedin.com/in/riad-ghoneim/">Linkedin</a>
 	<div id="pacman"></div>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
