--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 	<div id="shim">shim for font face</div>
 	<h1>Riad Ghoneim</h1>
-<div style="text-align: center;">
+<div type="text/css" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
   <a href="https://www.linkedin.com/in/riad-ghoneim/">LinkedIn</a>
 </div>
 	<div id="pacman"></div>
