--- a/index.html
+++ b/index.html
@@ -44,6 +44,41 @@
 	<h1>Riad Ghoneim</h1>
 <div type="text/css" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
   <a href="https://www.linkedin.com/in/riad-ghoneim/">LinkedIn</a>
+		<style type="text/css">
+		body {
+			background-color: black;
+		}
+
+		#pacman {
+			height: 470px;
+			width: 382px;
+			border-radius: 5px;
+			margin: 20px auto;
+		}
+
+		#shim {
+			font-family: 'Permanent Marker', cursive;
+			position: absolute;
+			visibility: hidden
+		}
+
+		h1 {
+			font-family: 'Permanent Marker', cursive;
+			text-align: center;
+			color: yellow;
+		}
+
+		body {
+			width: 342px;
+			margin: 0px auto;
+			font-family: sans-serif;
+		}
+
+		p {
+			text-decoration: none;
+			color: #0000FF;
+		}
+	</style>
 </div>
 	<div id="pacman"></div>
 
