--- a/index.html
+++ b/index.html
@@ -1,175 +1,116 @@
-<!-- This HTML file provides a simple example of a portfolio page. It contains a header, a few sections, and a few charts. -->
-<!-- It works with the three css files in this folder: example1.css, example2.css and example3.css. -->
-<!-- The HTML file defines the structure of the page, and the CSS files define how it looks. -->
-<!-- The CSS examples are all designed to work with this page. Try swapping them out on line 29 and see what happens. -->
-
-<!-- Take a look around and make your own copy to adapt for your own use. -->
-
-<!-- This is a comment -->
-<!-- Comments are not displayed in the browser -->
-<!-- They can be used to leave notes in the code -->
-
 <!DOCTYPE html>
-<html> 
-    <!-- HTML is heirarchial: tags like this define elements on the page. 
-    Each tag does something different. For example:
-        - The <html> tag defines the whole document.
-        - The <h1> tag defines a large heading
-        - The <p> tag defines a paragraph
-        - Tags appear as an opening <div> and closing </div> pair
-    -->
-
+<html>
 <head>    
-    <!-- The head tag links to resources our page needs and defines information about it. Tags in the <head> aren't displayed on the page. -->
-
-    <!-- This is a link to a stylesheet which contains rules about how each element on the page should be defined-->
-    <!-- Try swapping example1.css to another, and take a look at example1.css to see if you understand it-->
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>My Portfolio</title> <!-- The title displayed in the browser tab, not on the page itself -->
-
-    <!-- This is a link to the vega-lite which we're using to make graphs -->
+    <title>My Portfolio</title>
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-
     <style>
         #chartGrid {
             display: flex;
         }
-        
     </style>
 </head>
-
 <body> 
-<!-- The body tag contains the elements that visitors to our page will see. -->
-    <h1 class="big" style="margin-bottom: 0px;"> <!-- We have added a class to the header called "big" which we can use to style it in the CSS -->
-        <!-- This is a header, it is the largest text on the page -->
-        Your name
-    </h1>
+    <h1 class="big" style="margin-bottom: 0px;">Your name</h1>
     <p style="margin-top: 0px; color: darkblue">
-        <!-- we're setting the margin to 0px so the header and authour name are close together -->
-        Your Name | <a href="https://www.linkedin.com/in/YOUR_LINKEDIN/">LinkedIn</a> | <a
-            href="https://www.github.com/YOUR_GITHUB">GitHub</a>
+        Your Name | <a href="https://www.linkedin.com/in/YOUR_LINKEDIN/">LinkedIn</a> | <a href="https://www.github.com/YOUR_GITHUB">GitHub</a>
     </p>
-    <h3 class="small"> <!-- We have added a class to the header called "small" which we can use to style it in the CSS -->
+    <h3 class="small">
         This page acts as your portfolio of charts. You can use it as a good starting point to display your work but make sure to customise it to make it your own, or even start from scratch.  
     </h3>
 
-    <!-- We're organising the page into sections, with each section containing a chart, title and a description -->
     <section>
         <div class="chart-description">
             <h2>Section 1: A basic chart</h2>
-            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+            <p>
                 We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
                 As a first example, we're using a basic chart from our repo.
             </p>
         </div>
-        <figure id="Location1"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        <figure id="Location1"></figure>
     </section>
-<section>
-  <div class="chart-description">
-    <h2>Section 2: London Transport Map</h2>
-    <p>
-      This interactive map shows London boroughs and Underground lines. Each line is color-coded using Transport for London's branding.
-    </p>
-  </div>
-  <figure id="londonMap"></figure>
-</section>
+    <section>
+        <div class="chart-description">
+            <h2>Section 2: London Transport Map</h2>
+            <p>
+                This interactive map shows London boroughs and Underground lines. Each line is color-coded using Transport for London's branding.
+            </p>
+        </div>
+        <figure id="londonMap"></figure>
+    </section>
 
-    <!-- Do you want to add more sections? -->
-        <!-- Try copying pasting the section above -->
-        <!-- You'll need to change the id of the figure "<figure id="Location3"... -->
-        <!-- ... and add a new variable for the graph spec in the script at the bottom of the page -->
-
-
-    <!-- This is a script, it's a way to run JavaScript code on the page -->
     <script>
-        // This is a comment in JavaScript - it's a different language to HTML and CSS
+        // Embed Graph 1 (basic chart)
+        let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json";
+        vegaEmbed('#Location1', figure_1_spec);
 
-        let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; // We're storing the URL of the graph we want to display in a variable
-                                                                                                                    // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
-
-        vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
-
-        // Do you want to add more graphs?
-        // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
-        // e.g. 
-        // let figure_3_spec = ...
-        // vegaEmbed('#Location3', figure_3_spec)
-<script>
-  // Embed Graph 1 (basic chart)
-  let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json";
-  vegaEmbed('#Location1', figure_1_spec);
-
-  // Embed Graph 2 (London Transport Map)
-  let londonMapSpec = {
-    "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-    "width": 700,
-    "height": 500,
-    "view": { "stroke": "transparent" },
-    "layer": [
-      {
-        "data": {
-          "url": "data/londonBoroughs.json",
-          "format": { "type": "topojson", "feature": "boroughs" }
-        },
-        "mark": { "type": "geoshape", "stroke": "white", "strokeWidth": 2 },
-        "encoding": { "color": { "value": "#eee" } }
-      },
-      {
-        "data": {
-          "url": "data/londonCentroids.json",
-          "format": { "type": "json" }
-        },
-        "transform": [
-          {
-            "calculate": "indexof(datum.name,' ') > 0 ? substring(datum.name, 0, indexof(datum.name, ' ')) : datum.name",
-            "as": "bLabel"
-          }
-        ],
-        "mark": "text",
-        "encoding": {
-          "longitude": { "field": "cx", "type": "quantitative" },
-          "latitude": { "field": "cy", "type": "quantitative" },
-          "text": { "field": "bLabel", "type": "nominal" },
-          "size": { "value": 8 },
-          "opacity": { "value": 0.6 }
-        }
-      },
-      {
-        "data": {
-          "url": "data/londonTubeLines.json",
-          "format": { "type": "topojson", "feature": "line" }
-        },
-        "mark": { "type": "geoshape", "filled": false, "strokeWidth": 2 },
-        "encoding": {
-          "color": {
-            "field": "id",
-            "type": "nominal",
-            "legend": { "title": null, "orient": "bottom-right", "offset": 0 },
-            "scale": {
-              "domain": [
-                "Bakerloo", "Central", "Circle", "District", "DLR",
-                "Hammersmith & City", "Jubilee", "Metropolitan",
-                "Northern", "Piccadilly", "Victoria", "Waterloo & City"
-              ],
-              "range": [
-                "rgb(137,78,36)", "rgb(220,36,30)", "rgb(255,206,0)",
-                "rgb(1,114,41)", "rgb(0,175,173)", "rgb(215,153,175)",
-                "rgb(106,114,120)", "rgb(114,17,84)", "rgb(0,0,0)",
-                "rgb(0,24,168)", "rgb(0,160,226)", "rgb(106,187,170)"
-              ]
-            }
-          }
-        }
-      }
-    ]
-  };
-  vegaEmbed('#londonMap', londonMapSpec);
-</script>
-
+        // Embed Graph 2 (London Transport Map)
+        let londonMapSpec = {
+            "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+            "width": 700,
+            "height": 500,
+            "view": { "stroke": "transparent" },
+            "layer": [
+                {
+                    "data": {
+                        "url": "data/londonBoroughs.json",
+                        "format": { "type": "topojson", "feature": "boroughs" }
+                    },
+                    "mark": { "type": "geoshape", "stroke": "white", "strokeWidth": 2 },
+                    "encoding": { "color": { "value": "#eee" } }
+                },
+                {
+                    "data": {
+                        "url": "data/londonCentroids.json",
+                        "format": { "type": "json" }
+                    },
+                    "transform": [
+                        {
+                            "calculate": "indexof(datum.name,' ') > 0 ? substring(datum.name, 0, indexof(datum.name, ' ')) : datum.name",
+                            "as": "bLabel"
+                        }
+                    ],
+                    "mark": "text",
+                    "encoding": {
+                        "longitude": { "field": "cx", "type": "quantitative" },
+                        "latitude": { "field": "cy", "type": "quantitative" },
+                        "text": { "field": "bLabel", "type": "nominal" },
+                        "size": { "value": 8 },
+                        "opacity": { "value": 0.6 }
+                    }
+                },
+                {
+                    "data": {
+                        "url": "data/londonTubeLines.json",
+                        "format": { "type": "topojson", "feature": "line" }
+                    },
+                    "mark": { "type": "geoshape", "filled": false, "strokeWidth": 2 },
+                    "encoding": {
+                        "color": {
+                            "field": "id",
+                            "type": "nominal",
+                            "legend": { "title": null, "orient": "bottom-right", "offset": 0 },
+                            "scale": {
+                                "domain": [
+                                    "Bakerloo", "Central", "Circle", "District", "DLR",
+                                    "Hammersmith & City", "Jubilee", "Metropolitan",
+                                    "Northern", "Piccadilly", "Victoria", "Waterloo & City"
+                                ],
+                                "range": [
+                                    "rgb(137,78,36)", "rgb(220,36,30)", "rgb(255,206,0)",
+                                    "rgb(1,114,41)", "rgb(0,175,173)", "rgb(215,153,175)",
+                                    "rgb(106,114,120)", "rgb(114,17,84)", "rgb(0,0,0)",
+                                    "rgb(0,24,168)", "rgb(0,160,226)", "rgb(106,187,170)"
+                                ]
+                            }
+                        }
+                    }
+                }
+            ]
+        };
+        vegaEmbed('#londonMap', londonMapSpec);
     </script>
-
 </body>
-    
 </html>
