--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         This page acts as your portfolio of charts. You can use it as a good starting point to display your work but make sure to customise it to make it your own, or even start from scratch.  
     </h3>
 
+    <!-- Section 1 -->
     <section>
         <div class="chart-description">
             <h2>Section 1: A basic chart</h2>
@@ -31,6 +32,9 @@
         </div>
         <figure id="Location1"></figure>
     </section>
+
+    <!-- Section 2 -->
+    <section>
         <div class="chart-description">
             <h2>Section 2: London Transport Map</h2>
             <p>
@@ -39,40 +43,45 @@
         </div>
         <figure id="londonMap"></figure>
     </section>
-{
-  "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "data": {"url": "data/movies.json"},
-  "transform": [{
-    "filter": {"and": [
-      {"field": "IMDB Rating", "valid": true},
-      {"field": "Rotten Tomatoes Rating", "valid": true}
-    ]}
-  }],
-  "mark": "rect",
-  "width": 300,
-  "height": 200,
-  "encoding": {
-    "x": {
-      "bin": {"maxbins":60},
-      "field": "IMDB Rating",
-      "type": "quantitative"
-    },
-    "y": {
-      "bin": {"maxbins": 40},
-      "field": "Rotten Tomatoes Rating",
-      "type": "quantitative"
-    },
-    "color": {
-      "aggregate": "count",
-      "type": "quantitative"
-    }
-  },
-  "config": {
-    "view": {
-      "stroke": "transparent"
-    }
-  }
-}
+
+    <!-- Script to embed Vega-Lite chart -->
+    <script>
+        const spec1 = {
+          "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
+          "data": {"url": "data/movies.json"},
+          "transform": [{
+            "filter": {"and": [
+              {"field": "IMDB Rating", "valid": true},
+              {"field": "Rotten Tomatoes Rating", "valid": true}
+            ]}
+          }],
+          "mark": "rect",
+          "width": 300,
+          "height": 200,
+          "encoding": {
+            "x": {
+              "bin": {"maxbins":60},
+              "field": "IMDB Rating",
+              "type": "quantitative"
+            },
+            "y": {
+              "bin": {"maxbins": 40},
+              "field": "Rotten Tomatoes Rating",
+              "type": "quantitative"
+            },
+            "color": {
+              "aggregate": "count",
+              "type": "quantitative"
+            }
+          },
+          "config": {
+            "view": {
+              "stroke": "transparent"
+            }
+          }
+        };
+
+        vegaEmbed('#Location1', spec1).catch(console.error);
     </script>
 </body>
 </html>
