--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
+<script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
     <style>
         #chartGrid {
             display: flex;
@@ -44,12 +46,12 @@
 <!-- The body tag contains the elements that visitors to our page will see. -->
     <h1 class="big" style="margin-bottom: 0px;"> <!-- We have added a class to the header called "big" which we can use to style it in the CSS -->
         <!-- This is a header, it is the largest text on the page -->
-        Your name
+       Riad Ghoneim 
     </h1>
     <p style="margin-top: 0px; color: darkblue">
         <!-- we're setting the margin to 0px so the header and authour name are close together -->
-        Your Name | <a href="https://www.linkedin.com/in/YOUR_LINKEDIN/">LinkedIn</a> | <a
-            href="https://www.github.com/YOUR_GITHUB">GitHub</a>
+        Riad Ghoneim | <a href="https://www.linkedin.com/in/riad-ghoneim/">LinkedIn</a> | <a
+            href="https://www.github.com/its-riad">GitHub</a>
     </p>
     <h3 class="small"> <!-- We have added a class to the header called "small" which we can use to style it in the CSS -->
         This page acts as your portfolio of charts. You can use it as a good starting point to display your work but make sure to customise it to make it your own, or even start from scratch.  
@@ -87,7 +89,33 @@
         // e.g. 
         // let figure_3_spec = ...
         // vegaEmbed('#Location3', figure_3_spec)
+<div id="vis"></div>
+        <script type="text/javascript">
+  const spec = {
+  <script type="text/javascript">
+  const spec = {
+    "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+    "description": "Atmospheric CO2 concentration",
+    "data": {
+      "url": "https://vega.github.io/vega-datasets/data/co2-concentration.csv"
+    },
+    "layer": [
+      {
+        "mark": "line",
+        "encoding": {
+          "x": {"field": "Date", "type": "temporal"},
+          "y": {"field": "CO2", "type": "quantitative"}
+        }
+      }
+    ]
+  };
 
+  vegaEmbed('#vis', spec);
+</script>
+  };
+
+  vegaEmbed('#vis', spec);
+</script>
 
     </script>
 
