--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <!-- Section 2: CO2 Vega-Lite chart -->
     <section>
         <div class="chart-description">
-            <h2>Section 2: Layered Line Chart of CO2 Concentration</h2>
+            <h2>Section 2: Decadal Line Chart of CO2 Concentration</h2>
             <p>
-                This chart visualizes the atmospheric CO2 concentration over time, using a layered line chart from Vega-Lite's official examples.
+                This chart visualizes the atmospheric CO2 concentration by decade, showing year into decade on the x-axis.
             </p>
         </div>
         <figure id="co2_chart"></figure>
@@ -52,22 +52,71 @@
         let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json";
         vegaEmbed('#Location1', figure_1_spec);
 
-        // Embed the CO2 concentration Vega-Lite chart
+        // Embed the new decadal CO2 concentration Vega-Lite chart
         const co2_spec = {
-            "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-            "description": "Atmospheric CO2 concentration",
+            "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
             "data": {
-                "url": "https://vega.github.io/vega-datasets/data/co2-concentration.csv"
+                "url": "data/co2-concentration.csv",
+                "format": {"parse": {"Date": "utc:'%Y-%m-%d'"}}
+            },
+            "width": 800,
+            "height": 500,
+            "transform": [
+                {"calculate": "year(datum.Date)", "as": "year"},
+                {"calculate": "floor(datum.year / 10)", "as": "decade"},
+                {
+                    "calculate": "(datum.year % 10) + (month(datum.Date)/12)",
+                    "as": "scaled_date"
+                },
+                {
+                    "calculate": "datum.first_date === datum.scaled_date ? 'first' : datum.last_date === datum.scaled_date ? 'last' : null",
+                    "as": "end"
+                }
+            ],
+            "encoding": {
+                "x": {
+                    "type": "quantitative",
+                    "title": "Year into Decade",
+                    "axis": {"tickCount": 11}
+                },
+                "y": {
+                    "title": "CO2 concentration in ppm",
+                    "type": "quantitative",
+                    "scale": {"zero": false}
+                },
+                "color": {
+                    "field": "decade",
+                    "type": "ordinal",
+                    "scale": {"scheme": "magma"},
+                    "legend": null
+                }
             },
             "layer": [
                 {
                     "mark": "line",
                     "encoding": {
-                        "x": {"field": "Date", "type": "temporal"},
-                        "y": {"field": "CO2", "type": "quantitative"}
+                        "x": {"field": "scaled_date"},
+                        "y": {"field": "CO2"}
+                    }
+                },
+                {
+                    "mark": {"type": "text", "baseline": "top", "aria": false},
+                    "encoding": {
+                        "x": {"aggregate": "min", "field": "scaled_date"},
+                        "y": {"aggregate": {"argmin": "scaled_date"}, "field": "CO2"},
+                        "text": {"aggregate": {"argmin": "scaled_date"}, "field": "year"}
+                    }
+                },
+                {
+                    "mark": {"type": "text", "aria": false},
+                    "encoding": {
+                        "x": {"aggregate": "max", "field": "scaled_date"},
+                        "y": {"aggregate": {"argmax": "scaled_date"}, "field": "CO2"},
+                        "text": {"aggregate": {"argmax": "scaled_date"}, "field": "year"}
                     }
                 }
-            ]
+            ],
+            "config": {"text": {"align": "left", "dx": 3, "dy": 1}}
         };
         vegaEmbed('#co2_chart', co2_spec);
     </script>
