--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <!-- This is a link to a stylesheet which contains rules about how each element on the page should be defined-->
     <!-- Try swapping example1.css to another, and take a look at example1.css to see if you understand it-->
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>My Portfolio</title> <!-- The title displayed in the browser tab, not on the page itself -->
+    <title>Riad's Portfolio</title> <!-- The title displayed in the browser tab, not on the page itself -->
 
     <!-- This is a link to the vega-lite which we're using to make graphs -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@6"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
     <style>
@@ -44,15 +44,15 @@
 <!-- The body tag contains the elements that visitors to our page will see. -->
     <h1 class="big" style="margin-bottom: 0px;"> <!-- We have added a class to the header called "big" which we can use to style it in the CSS -->
         <!-- This is a header, it is the largest text on the page -->
-        Riad Ghoneim
+        Riad Ghoneim Data Automation
     </h1>
-    <p style="margin-top: 0px; color: darkblue">
+    <p style="margin-top: 0px; color: rgb(139, 0, 0)">
         <!-- we're setting the margin to 0px so the header and authour name are close together -->
         Riad Ghoneim | <a href="https://www.linkedin.com/in/riad-ghoneim/">LinkedIn</a> | <a
             href="https://www.github.com/its-riad">GitHub</a>
     </p>
     <h3 class="small"> <!-- We have added a class to the header called "small" which we can use to style it in the CSS -->
-        This page acts as your portfolio of charts. You can use it as a good starting point to display your work but make sure to customise it to make it your own, or even start from scratch.  
+        This is a page where I will be displaying my data automation and visulatsation work from throughout my masters at LSE. 
     </h3>
 
     <!-- We're organising the page into sections, with each section containing a chart, title and a description -->
@@ -67,6 +67,55 @@
         <figure id="Location1"></figure> <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
     </section>
 
+     <section>
+        <div class="chart-description">
+            <h2>Section 1: A more complex chart</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
+                As a first example, we're using a basic chart from our repo.
+            </p>
+        </div>
+       <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        <figure id="Location2"></figure>
+    </section>
+
+    <section>
+        <div class="chart-description">
+            <h2>Section 3: A more complex chart</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
+                As a first example, we're using a basic chart from our repo.
+            </p>
+        </div>
+       <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        <figure id="Location3"></figure>
+    </section>
+    
+    <section>
+        <div class="chart-description">
+            <h2>Section 4: A more complex chart</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
+                As a first example, we're using a basic chart from our repo.
+            </p>
+        </div>
+       <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        <figure id="Location4"></figure>
+    </section>
+        <section>
+        <div class="chart-description">
+            <h2>Section 5: Lecture 2</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
+                As a first example, we're using a basic chart from our repo.
+            </p>
+        </div>
+       <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        <figure id="Location5"></figure>
+    </section>
+    
+
+
     <!-- Do you want to add more sections? -->
         <!-- Try copying pasting the section above -->
         <!-- You'll need to change the id of the figure "<figure id="Location3"... -->
@@ -77,120 +126,25 @@
     <script>
         // This is a comment in JavaScript - it's a different language to HTML and CSS
 
-        let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; // We're storing the URL of the graph we want to display in a variable
-                                                                                                                    // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
+        let figure_1_spec = "https://raw.githubusercontent.com/EconomicsObservatory/courses/main/2/s2_chart2.json"; 
+        let figure_2_spec = "Test.json"; 
+        let figure_3_spec = "test2.json";
+        let figure_4_spec = "test3.json";
+        let figure_5_spec = "test5.json";
+       // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
+        vegaEmbed('#Location2', figure_2_spec)
+        vegaEmbed('#Location3', figure_3_spec)
+        vegaEmbed('#Location4', figure_4_spec)
+        vegaEmbed('#Location5', figure_5_spec)
 
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
         // e.g. 
         // let figure_3_spec = ...
         // vegaEmbed('#Location3', figure_3_spec)
-
-
     </script>
-<section>
-  <div class="chart-description">
-    <h2>Section 2: Declining Populations</h2>
-    <p>This chart shows cumulative % population change for several countries, using UN data.</p>
-  </div>
-  <figure id="Location2"></figure>
-</section>
-
-<script>
-  let figure_2_spec = {
-    "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-    "title": {
-      "text": "Declining populations",
-      "subtitle":"Cumulative % change in population. Source: UN.",
-      "subtitleFontStyle":"italic",
-      "subtitleFontSize":10,
-      "anchor": "start",
-      "color": "black"
-    },
-    "data": {
-      "url": "https://raw.githubusercontent.com/RDeconomist/RDeconomist.github.io/main/data/demographicsUNPopChange.csv"
-    },
-    "repeat": {"layer": ["S Korea", "Japan", "UK", "Italy", "Spain", "France", "US"]},
-    "spec": {
-      "height": 300,
-      "width": 240,
-      "mark": {"type":"line","strokeWidth":2},    
-      "encoding": {
-        "x": {"field": "Year", "type": "temporal"},
-        "y": {"field": {"repeat": "layer"}, "type": "quantitative", "title": null},
-        "color": {
-          "datum": {"repeat": "layer"},
-          "scale": {"range": ["black","yellow","orange","lightgrey","lightblue","pink","lightgreen"]}
-        }
-      }
-    }
-  };
-
-  vegaEmbed('#Location2', figure_2_spec);
-</script>
-<section>
-  <div class="chart-description">
-    <h2>Section 3: Inflation – Four G7 Countries</h2>
-    <p>Inflation trends for selected G7 countries (OECD data).</p>
-  </div>
-  <figure id="Location3"></figure>
-</section>
-
-<script>
-  let figure_3_spec = {
-    "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-    "title": {
-      "text": "Inflation - four G7 countries",
-      "subtitle": ["Source: OECD",""],
-      "subtitleFontStyle":"italic",
-      "subtitleFontSize":10,
-      "anchor": "start",
-      "color": "black"
-    },
-    "width":300,
-    "height":300,
-    "mark":{
-      "type": "line",
-      "smooth":false,
-      "strokeWidth":2,
-      "opacity":1
-    },
-    "data": {
-      "url": "https://raw.githubusercontent.com/RDeconomist/RDeconomist.github.io/main/charts/ONSinflation/data_OECD_inflation2.csv"
-    },
-    "transform": [
-      {"calculate": "datum.Value/100", "as": "valueToUse"},
-      {"calculate": "year(datum.TIME)", "as": "year"},
-      {"filter":"datum.LOCATION!='JPN'"},
-      {"filter":"datum.LOCATION!='CAN'"},
-      {"filter":"datum.LOCATION!='ITA'"},
-      {"filter":"datum.year >1999"}
-    ],
-    "encoding": {
-      "x": {
-        "field": "TIME",
-        "type": "temporal",
-        "title": null
-      },
-      "y": {
-        "field": "valueToUse",
-        "type": "quantitative",
-        "title": null,
-        "axis":{"format":"%"}
-      },
-      "color": {
-        "field":"Country",
-        "title": null,
-        "legend": {"orient": "top-left"}
-      }
-    }
-  };
-
-  // Embed the chart into #Location3
-  vegaEmbed('#Location3', figure_3_spec);
-</script>
 
 
 </body>
