--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
        <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
         <figure id="Location5"></figure>
     </section>
+     </section>
+        <section>
+        <div class="chart-description">
+            <h2>Section 6: Lecture 2</h2>
+            <p> <!-- This is a paragraph, it's the main way to display text on a web page -->
+                We've organised the page into sections, with each section containing a chart, title and a description. Here, we can describe the chart and give some context.
+                As a first example, we're using a basic chart from our repo.
+            </p>
+        </div>
+       <!-- we give it an id so we can put a vega-lite graph here with VegaEmbed -->
+        <figure id="Location6"></figure>
+    </section>
     
 
 
@@ -131,6 +143,7 @@
         let figure_3_spec = "test2.json";
         let figure_4_spec = "test3.json";
         let figure_5_spec = "test5.json";
+        let figure_6_spec = "test6.json";
        // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
@@ -138,6 +151,8 @@
         vegaEmbed('#Location3', figure_3_spec)
         vegaEmbed('#Location4', figure_4_spec)
         vegaEmbed('#Location5', figure_5_spec)
+        vegaEmbed('#Location6', figure_6_spec)
+    
 
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
