--- a/index.html
+++ b/index.html
@@ -148,10 +148,14 @@
     <figure id="Location8"></figure>
     </section>
 
+    
     <section>
-  <h2>Live API Data</h2>
-  <div id="api-live-section"></div>
-</section>
+    <div class="chart-description">
+        <h2>Section 9: Egypt and Ethiopia Inflation Rates</h2>
+        <p>This chart compares the inflation rates of Egypt and Ethiopia over time.</p>
+    </div>
+    <figure id="Location9"></figure>
+    </section>
 
 
     <!-- Do you want to add more sections? -->
@@ -172,6 +176,7 @@
         let figure_6_spec = "test6.json";
         let figure_7_spec = "inflation.json";
         let figure_8_spec = "TestLive.json";
+        let figure_9_spec = "api.json";
        // You should have a spec for a graph in this same folder. Just specify its name here, e.g. let figure_1_spec = "chart1.json"
 
         vegaEmbed('#Location1', figure_1_spec) // We're using the vegaEmbed function to put a graph in the element with id figure_1
@@ -182,43 +187,15 @@
         vegaEmbed('#Location6', figure_6_spec)
         vegaEmbed('#Location7', figure_7_spec)
         vegaEmbed('#Location8', figure_8_spec)
+        vegaEmbed('#Location9', figure_9_spec)
 
         // Do you want to add more graphs?
         // try defining a new variable for figure_3_spec, adding VegaEmbed for Location3, and adding a new section in the HTML
         // e.g. 
         // let figure_3_spec = ...
-        // vegaEmbed('#Location3', figure_3_spec
+        // vegaEmbed('#Location3', figure_3_spec)
 
     </script>
-
-
-    <script>
-
-    // Fetch live exchange rates and update the api-live-section with text
-    async function fetchExchangeRateText() {
-        const apiKey = "4994cf438b50cc4f63e81679";
-        const url = `https://v6.exchangerate-api.com/v6/${apiKey}/latest/USD`;
-        try {
-            const response = await fetch(url);
-            const data = await response.json();
-            if (data.result === "success") {
-                const eur = data.conversion_rates.EUR;
-                const gbp = data.conversion_rates.GBP;
-                document.getElementById('api-live-section').innerHTML =
-                    `USD to EUR: ${eur}<br>USD to GBP: ${gbp}`;
-            } else {
-                document.getElementById('api-live-section').innerHTML =
-                    'Error loading exchange rates.';
-            }
-        } catch (error) {
-            document.getElementById('api-live-section').innerHTML =
-                'Error loading data.';
-        }
-    }
-    fetchExchangeRateText();
-    setInterval(fetchExchangeRateText, 30000);
-
-</script>
 
 </body>
     
