--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="hero-content">
             <h1 data-en="PEOPLE CENTRED<br>DATA" data-ar="بيانات تتمحور<br>حول الإنسان">PEOPLE CENTRED<br>ECONOMICS</h1>
             <div class="hero-image">
-                <img src="tuareg.jpg" alt="Tuareg desert image">
+                <img src="000000010003-1.jpg" alt="Birkash Market image">
             </div>
         </div>
     </section>
