Add heading for Birkash Camel Market section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 <img src="000000010003-1.jpg" alt="Birkash Market image">
             </div>
         </div>
+            <h3 data-en="Birkash Camel Market, Cairo @Riad Ghoneim" data-ar="سوق الجمال بركاش القاهرة @رياض غنيم"
+        </div>
     </section>
 
     <!-- About Section -->
