--- a/pending.html
+++ b/pending.html
@@ -209,10 +209,10 @@
         let currentFrame = 0;
         let animationInterval = null;
         const frames = [
-            'taxi_meter_base.png',
-            'taxi_meter_frame2.png',
-            'taxi_meter_frame3.png',
-            'taxi_meter_frame4.png'
+            'meter_horse_1.png',
+            'meter_horse_2.png',
+            'meter_horse_3.png',
+            'meter_horse_4.png'
         ];
 
         function updateMeter(value) {
