--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
         <div class="hero-content">
             <h1 data-en="PEOPLE CENTRED<br>DATA" data-ar="بيانات تتمحور<br>حول الإنسان">PEOPLE CENTRED<br>ECONOMICS</h1>
             <div class="hero-image">
-                <img src="000000010003-1.jpg" alt="Birkash Market image">
+                <img src="tuareg.jpg" alt="Tuareg desert image">
             </div>
-        </div>
-            <h3 data-en="Birkash Camel Market, Cairo @Riad Ghoneim" data-ar="سوق الجمال بركاش القاهرة @رياض غنيم"
         </div>
     </section>
 
@@ -82,7 +80,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p data-en="© 2025 Riad Ghoneim. MSc London School of Economics. People Centred Economics." data-ar="© 2025 رياض غنيم.">© 2025 Riad Ghoneim. People Centred Economics.</p>
+            <p data-en="© 2025 Riad Ghoneim. People Centred Economics." data-ar="© 2025 رياض غنيم. بيانات تتمحور حول الإنسان.">© 2025 Riad Ghoneim. People Centred Economics.</p>
         </div>
     </footer>
 
