--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <div class="link-item">
                     <h3 data-en="PORTFOLIO" data-ar="المحفظة">PORTFOLIO</h3>
                     <p data-en="My portfolio from weekly coding challenges at the LSE Data Automation and Visualisation Module (Will be completed by January)." data-ar="البحوث الاقتصادية وتحليل البيانات والدراسات المتمحورة حول الإنسان.">My portfolio from weekly coding challenges at the LSE Data Automation and Visualisation Module (Will be fully completed by January).</p>
-                    <a href="portfolio_vis.html" data-en="VIEW PORTFOLIO" data-ar="عرض المحفظة">VIEW PORTFOLIO</a>
+                    <a href="portfolio.html" data-en="VIEW PORTFOLIO" data-ar="عرض المحفظة">VIEW PORTFOLIO</a>
                 </div>
 
                 <div class="link-item">
                     <h3 data-en="PROJECTS" data-ar="المشاريع">PROJECTS</h3>
                     <p data-en="A case study on inflation in Egypt and consumer induced inflation momentum for the Data Automation and Visualisation module at the LSE School of Public Policy (Will be completed by January)." data-ar="دراسات حالة تجمع بين علم البيانات والاقتصاد والبحث الإثنوغرافي.">A case study on inflation in Egypt and consumer induced inflation momentum for the Data Automation and Visualisation module at the LSE School of Public Policy (Will be completed by January).</p>
-                    <a href="pending.html" data-en="VIEW PROJECT" data-ar="عرض المشاريع">VIEW PROJECTS</a>
+                    <a href="project.html" data-en="VIEW PROJECT" data-ar="عرض المشاريع">VIEW PROJECTS</a>
                 </div>
 
                 <div class="link-item">
