Update print statement from 'Hello' to 'Goodbye'

--- a/project.html
+++ b/project.html
@@ -67,7 +67,7 @@
     </section>
 
     <section style="text-align: center; margin: 40px auto;">
-        <img src="project_banner.JPG" alt="Project Banner" style="max-width: 600px; width: 100%;">
+        <img src="project_banner.jpg" alt="Project Banner" style="max-width: 600px; width: 100%;">
         <p style="color: #999; font-size: 0.9em; margin-top: 10px;">Image was shot by Riad Ghoneim for a project in London on Arab Identity</p>
     </section>
 
@@ -623,3 +623,4 @@
 </body>
 
 </html>
+
